# Laplace-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: compare.ipynb  config.txt  example.ipynb  functions.py  jacobi.py  scalability_test.ipynb
examples/Data/: N10_M15_data.csv  N10_M15_mask.csv  N10_M15_res_openMP_3.h5  N10_M15_res_python.csv  N10_M15_res_serial.csv  N10_M15_res_serial.h5  data_N10.csv  mask_N10.csv  python_res_N10.csv  serial_res_N10.csv  serial_res_N10.h5
src/: CMakeLists.txt  HDF5Writer.cpp  HDF5Writer.hpp  calculator.cpp  calculator.hpp  exceptions.hpp  filehandler.cpp  filehandler.hpp  main.cpp  parameterlist.hpp  parser.cpp  parser.hpp  utilities.cpp  utilities.hpp
test/: CMakeLists.txt  HDF5Writer_test.cpp  calculator_test.cpp  filehandler_test.cpp  test_HDF5Writer.cpp  test_filehandler.cpp  test_parser.cpp  test_utilities.cpp  utilities_test.cpp
